[gd_scene load_steps=3 format=3 uid="uid://dp1pk8apbgxt2"]

[ext_resource type="Script" path="res://mesh-library-creator/MeshLibraryUtils.gd" id="1_n36oy"]
[ext_resource type="PackedScene" uid="uid://d1xbj35rutf18" path="res://utils/ConfirmDialogAsync.tscn" id="2_g8vlg"]

[node name="MeshLibraryUtils" type="Node"]
script = ExtResource("1_n36oy")

[node name="ConfirmDialogAsync" parent="." instance=ExtResource("2_g8vlg")]
initial_position = 2
dialog_text = "Confirm Overwrite Existing Library?"

[node name="FileDialogNewLibraryFolder" type="FileDialog" parent="."]
title = "Open a Directory"
initial_position = 2
size = Vector2i(392, 300)
min_size = Vector2i(200, 300)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
